--- a/css/style.css
+++ b/css/style.css
@@ -75,20 +75,34 @@ a:hover {
   left: 0px;
   background: #ffffFfE6;
 }
-/* #last-nav {
-  padding-left: 0px;
-} */
-#header-nav{
+
+#header-nav {
   justify-content: space-between;
   font-size: 19px;
-  
+
 }
-#search{
+
+#search {
   height: 100%;
 }
-.nav-child{
+
+/* .nav-child {
   font-weight: bolder;
+} */
+.width{
+  width: 71px;
 }
+#header-nav::after {
+  position:absolute;
+  top:0;
+  right:0;
+  content:"";
+  width:100px;
+  background-color:#f72210;
+  border-left:12px solid white;
+  border-top:13px solid #F72210
+}
+
 /* Main container */
 
 .main .badge,
