fixed linter errors

--- a/css/style.css
+++ b/css/style.css
@@ -71,8 +71,8 @@ a:hover {
 
 #bottom-left {
   position: absolute;
-  bottom: 0px;
-  left: 0px;
+  bottom: 0;
+  left: 0;
   background: #ffffFfe6;
 }
 
