--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,10 @@ a:hover {
 
 #header-menu {
   background-color: #f72210;
+  width: 100%;
 }
+
+
 
 #middle-logo {
   height: 100%;
@@ -72,17 +75,16 @@ a:hover {
   background: #ffffffe6;
 }
 
-#header-nav {
-  justify-content: space-between;
-  font-size: 19px;
-}
-
 #search {
   height: 100%;
 }
 
 .width {
   width: 71px;
+}
+
+.nav-child-link {
+  font-weight: bolder;
 }
 
 #header-nav::after {
