--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,6 @@ a:hover {
   width: 100%;
 }
 
-
-
 #middle-logo {
   height: 100%;
 }
@@ -178,7 +176,8 @@ a:hover {
 }
 
 .background-newsletter {
-  background: url(https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&h=265&q=90&f=742bce9a6f72dd8f19ba2e7fd5db06e5) center no-repeat;
+  background: url(https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&h=265&q=90&f=742bce9a6f72dd8f19ba2e7fd5db06e5)
+    center no-repeat;
   background-size: cover;
 }
 
@@ -200,32 +199,38 @@ h2.text-danger {
 }
 
 #image-1 {
-  background: url(https://d.newsweek.com/en/full/1635849/nsa-headquarters-maryland-viewed-2010.webp?w=466&h=311&q=90&f=37efd47e51613624843ccc626f7c1753) no-repeat center;
+  background: url(https://d.newsweek.com/en/full/1635849/nsa-headquarters-maryland-viewed-2010.webp?w=466&h=311&q=90&f=37efd47e51613624843ccc626f7c1753)
+    no-repeat center;
   background-size: cover;
 }
 
 #image-2 {
-  background: url(https://d.newsweek.com/en/full/1642296/joe-biden-donald-trump.webp?w=466&h=311&q=90&f=aeec2a85ab35ef9f233f2e222698a54a) no-repeat center;
+  background: url(https://d.newsweek.com/en/full/1642296/joe-biden-donald-trump.webp?w=466&h=311&q=90&f=aeec2a85ab35ef9f233f2e222698a54a)
+    no-repeat center;
   background-size: cover;
 }
 
 #image-3 {
-  background: url(https://d.newsweek.com/en/full/1642296/joe-biden-donald-trump.webp?w=466&h=311&q=90&f=aeec2a85ab35ef9f233f2e222698a54a) no-repeat center;
+  background: url(https://d.newsweek.com/en/full/1642296/joe-biden-donald-trump.webp?w=466&h=311&q=90&f=aeec2a85ab35ef9f233f2e222698a54a)
+    no-repeat center;
   background-size: cover;
 }
 
 #image-4 {
-  background: url(https://d.newsweek.com/en/full/1642296/joe-biden-donald-trump.webp?w=466&h=311&q=90&f=aeec2a85ab35ef9f233f2e222698a54a) no-repeat center;
+  background: url(https://d.newsweek.com/en/full/1642296/joe-biden-donald-trump.webp?w=466&h=311&q=90&f=aeec2a85ab35ef9f233f2e222698a54a)
+    no-repeat center;
   background-size: cover;
 }
 
 #image-5 {
-  background: url(https://d.newsweek.com/en/full/1635849/nsa-headquarters-maryland-viewed-2010.webp?w=466&h=311&q=90&f=37efd47e51613624843ccc626f7c1753) no-repeat center;
+  background: url(https://d.newsweek.com/en/full/1635849/nsa-headquarters-maryland-viewed-2010.webp?w=466&h=311&q=90&f=37efd47e51613624843ccc626f7c1753)
+    no-repeat center;
   background-size: cover;
 }
 
 #image-6 {
-  background: url(https://d.newsweek.com/en/full/1635849/nsa-headquarters-maryland-viewed-2010.webp?w=466&h=311&q=90&f=37efd47e51613624843ccc626f7c1753) no-repeat center;
+  background: url(https://d.newsweek.com/en/full/1635849/nsa-headquarters-maryland-viewed-2010.webp?w=466&h=311&q=90&f=37efd47e51613624843ccc626f7c1753)
+    no-repeat center;
   background-size: cover;
 }
 
